--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/shreyasmurdeshwar/pdf/blob/main/visiting_card_design.pdf">click here for visiting card</a></p>
+  <p><a href="visiting_card_design.pdf">click here for visiting card</a></p>
 </html>
